# Image-Filtering-Color-Quantization

./: README.md
Project1/: CMakeLists.txt
Project2/: CMakeLists.txt
Project2/src/: main.cpp  octree_quantizer.cpp  octree_quantizer.h
